@@ -4,6 +4,11 @@ Changelog for plone.app.kss
 
 plone.app.kss - 1.5dev Unreleased
 
+    - Make the macroContent helper work on Zope 2.12 by
+      using a BoundPageTemplate instead of an acquisition-
+      wrapped ViewPageTemplateFile.
+      [davisagli]
+
     - Translate message and message type passed to
       PloneCommands.issuePortalMessage.  This fixes #7282.
       [maurits]
